--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 h1 {
     color: peru;
 }
+
+p {
+    color: blue;
+}
+
+button {
+    color: brown;
+    background-color: chartreuse;
+}
+
+body {
+    background-color: aqua;
+}
