--- a/style.css
+++ b/style.css
@@ -12,6 +12,33 @@ button {
 }
 
 body {
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(0, 255, 255);
     /*use color picker website for rgb values*/
+}
+
+h2 {
+    color: #0000ff;
+    /* color pallete website for hexadecimal color */
+}
+
+/*
+*{
+     color: aqua;  
+}   
+ */
+/*      Note : astrisc selector is a universal seletor, that can change all the text color same. 
+*/
+
+/* Id selector */
+
+#heading2 {
+    color: red;
+}
+
+#heading3 {
+    color: #808080;
+}
+
+.myClass {
+    color: crimson;
 }
