--- a/style.css
+++ b/style.css
@@ -55,3 +55,16 @@ h2 {
 /* h3,h4,h5{
     color: blueviolet;                 (selector work in comma)
 } */
+
+#paragraph {
+    text-align: right;
+    /* using id selector */
+}
+
+#para {
+    text-align: center;
+}
+
+#h1 {
+    text-align: center;
+}
