--- a/cssLevel4/style4.css
+++ b/cssLevel4/style4.css
@@ -16,4 +16,6 @@ div {
     width: 800px;
     height: 200px;
     display: flex;
+    flex-direction: row-reverse;
+    /* by default all elements are in row direction*/
 }
